# app/Http/Controllers/AuthController.php
@@ -2,11 +2,14 @@
 
 namespace App\Http\Controllers;
 
+use Exception;
 use App\Models\User;
 use Illuminate\Http\Request;
 use App\Services\AuthService;
 use Illuminate\Http\JsonResponse;
 use App\Http\Requests\AuthRequest;
+use Illuminate\Validation\ValidationException;
+use Illuminate\Database\Eloquent\ModelNotFoundException;
 
 class AuthController extends Controller
 {
@@ -54,7 +57,7 @@ class AuthController extends Controller
     *                 @OA\Property(property="password", type="string", format="password", example="Pass123!"),
     *                 @OA\Property(property="password_confirmation", type="string", format="password", example="Pass123!"),
     *                 @OA\Property(property="phone", type="string", example="+989123456789"),
-    *                 @OA\Property(property="age", type="integer", example=32),
+    *                 @OA\Property(property="age", type="string", example="32"),
     *                 @OA\Property(property="country_id", type="integer", example=1),
     *                 @OA\Property(property="level_id", type="integer", example=3)
     *             )
@@ -350,6 +353,119 @@ class AuthController extends Controller
                 'message'     => 'user profile retrieved successfully.',
                 'userProfile' => $userProfile,
             ]);
+        } catch (Exception $e) {
+            \Log::error($e->getMessage());
+            return response()->json(['message' => 'Error'], 500);
+        }
+    }
+
+    /**
+    * @OA\Put(
+    *     path="/api/user/profile",
+    *     tags={"Auth"},
+    *     security={{"sanctum":{}}},
+    *     summary="update user's profile",
+    *     description="This endpoint allows you to update user's profile.",
+    *     operationId="updateProfile",
+    *     @OA\RequestBody(
+    *         required=true,
+    *         @OA\MediaType(
+    *             mediaType="application/json",
+    *             @OA\Schema(
+    *                 required={"fname", "lname", "email", "password", "password_confirmation", "phone", "age", "country_id", "level_id"},
+    *                 @OA\Property(property="fname", type="string", example="Saul"),
+    *                 @OA\Property(property="lname", type="string", example="Goodman"),
+    *                 @OA\Property(property="email", type="string", format="email", example="saul@example.com"),
+    *                 @OA\Property(property="password", type="string", format="password", example="Pass123!"),
+    *                 @OA\Property(property="password_confirmation", type="string", format="password", example="Pass123!"),
+    *                 @OA\Property(property="phone", type="string", example="+989123456789"),
+    *                 @OA\Property(property="age", type="string", example="32"),
+    *                 @OA\Property(property="country_id", type="integer", example=1),
+    *                 @OA\Property(property="level_id", type="integer", example=3)
+    *             )
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=200,
+    *         description="Successful operation",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=true),
+    *             @OA\Property(property="message", type="string", example="User profile updated successfully."),
+    *             @OA\Property(property="user", type="object",
+    *                 @OA\Property(property="id", type="integer", example=1),
+    *                 @OA\Property(property="fname", type="string", example="Saul"),
+    *                 @OA\Property(property="lname", type="string", example="Goodman"),
+    *                 @OA\Property(property="email", type="string", example="saul@example.com"),
+    *                 @OA\Property(property="phone", type="string", example="09123456789"),
+    *                 @OA\Property(property="age", type="string", example="32"),
+    *                 @OA\Property(property="country_id", type="integer", example=1),
+    *                 @OA\Property(property="level_id", type="integer", example=3),
+    *                 @OA\Property(property="created_at", type="string", format="date-time", example="2025-04-10T10:00:00Z"),
+    *                 @OA\Property(property="updated_at", type="string", format="date-time", example="2025-04-10T10:00:00Z")
+    *             )
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=401,
+    *         description="Unauthenticated",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=false),
+    *             @OA\Property(property="message", type="string", example="Authentication needed.")
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=404,
+    *         description="Not found",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=false),
+    *             @OA\Property(property="message", type="string", example="Not found.")
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=422,
+    *         description="Validation error",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=false),
+    *             @OA\Property(property="message", type="string", example="Validation failed."),
+    *             @OA\Property(
+    *                 property="errors",
+    *                 type="object",
+    *                 @OA\Property(
+    *                     property="email",
+    *                     type="array",
+    *                     @OA\Items(type="string", example="The email has already been taken.")
+    *                 )
+    *             )
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=500,
+    *         description="Unexpected error",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=false),
+    *             @OA\Property(property="message", type="string", example="Internal error.")
+    *         )
+    *     )
+    * )
+    */
+    public function updateProfile(AuthRequest $request)
+    {
+        try{
+            $user = auth()->user();
+            if (!$user) {
+                return response()->json(['message' => 'Unauthenticated'], 401);
+            }
+            $user = $this->authService
+                            ->setId($user->id)
+                            ->updateUser($request->all());
+            return response()->json([
+                'message' => 'user profile updated successfully.',
+                'user'    => $user,
+            ]);
+        } catch (ValidationException $e) {
+            return response()->json(['message' => 'Validation Error'], 422);
+        } catch(ModelNotFoundException $e) {
+            return response()->json(['message' => 'Not Found'], 404);
         } catch (Exception $e) {
             \Log::error($e->getMessage());
             return response()->json(['message' => 'Error'], 500);
